--- a/archives.html
+++ b/archives.html
@@ -13,12 +13,20 @@
         <header id="banner" class="body">
                 <h1><a href="/">Alexandre Petit</a></h1>
                 <nav><ul>
+                    <li><a href="/pages/a-propos-de-moi.html">A propos de moi</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Alexandre Petit</h1>
 
 <dl>
+    <dt>Lun 05 août 2024</dt>
+    <dd><a href="/mon-troisieme-article.html">Mon troisième article</a></dd>
+    <dt>Dim 04 août 2024</dt>
+    <dd><a href="/mon-deuxieme-article.html">Mon deuxième article</a></dd>
+    <dt>Dim 04 août 2024</dt>
+    <dd><a href="/mon-premier-article.html">Mon premier article</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
