--- a/categories.html
+++ b/categories.html
@@ -13,12 +13,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Alexandre Petit</a></h1>
                 <nav><ul>
+                    <li><a href="/pages/a-propos-de-moi.html">A propos de moi</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Categories for Alexandre Petit</h1>
     <ul>
+        <li><a href="/category/misc.html">misc</a> (3)</li>
     </ul>
 </section>
 
