--- a/tags.html
+++ b/tags.html
@@ -13,6 +13,8 @@
         <header id="banner" class="body">
                 <h1><a href="/">Alexandre Petit</a></h1>
                 <nav><ul>
+                    <li><a href="/pages/a-propos-de-moi.html">A propos de moi</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
